--- a/src/pages/Selects/Selects.module.css
+++ b/src/pages/Selects/Selects.module.css
@@ -5,5 +5,10 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
-  background-color: #fff;
+  gap: 4rem;
+
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+  }
 }
